# macwarden

./: .gitignore  AGENTS-CONTEXT.md  AGENTS.md  CHANGELOG.md  Cargo.toml  FEATURES.md  README.md  deny.toml  macos-data-about-you.md
crates/appdb/: Cargo.toml
crates/appdb/src/: db.rs  db_test.rs  error.rs  lib.rs  loader.rs  loader_test.rs  profile.rs
crates/catalog/: Cargo.toml
crates/catalog/data/: annotations.toml
crates/catalog/src/: annotation.rs  annotation_test.rs  discovery.rs  discovery_test.rs  error.rs  lib.rs  loader.rs  loader_test.rs  plist_parser.rs
crates/dns/: Cargo.toml
crates/dns/src/: cache.rs  cache_test.rs  lib.rs  parser.rs  parser_test.rs  persist.rs  persist_test.rs
crates/es/: Cargo.toml
crates/es/src/: client.rs  client_test.rs  error.rs  error_test.rs  ffi.rs  ffi_test.rs  handler.rs  lib.rs
crates/inventory/: Cargo.toml
crates/inventory/src/: blocklist.rs  blocklist_test.rs  bundle.rs  bundle_test.rs  db.rs  db_test.rs  error.rs  hash.rs  hash_test.rs  lib.rs  record.rs  record_test.rs  scanner.rs  scanner_test.rs
crates/launchd/: Cargo.toml
crates/launchd/src/: error.rs  executor.rs  executor_test.rs  lib.rs  macos.rs  macos_test.rs  mock.rs  mock_test.rs
crates/macknows/src/: lib.rs  output.rs  schema.rs
crates/macwarden/: Cargo.toml
crates/macwarden-catalog/: Cargo.toml
crates/macwarden-catalog/data/: annotations.toml  groups.toml
crates/macwarden-catalog/data/profiles/: airgapped.toml  base.toml  developer.toml  minimal.toml  paranoid.toml  privacy.toml  studio.toml
crates/macwarden-catalog/src/: annotation.rs  annotation_test.rs  discovery.rs  discovery_test.rs  error.rs  lib.rs  loader.rs  loader_test.rs  plist_parser_test.rs
crates/macwarden-core/: Cargo.toml
crates/macwarden-core/src/: engine.rs  error.rs  group.rs  lib.rs  profile.rs  profile_test.rs  safelist.rs  safelist_test.rs  types.rs  types_test.rs
crates/macwarden-launchd/: Cargo.toml
crates/macwarden-launchd/src/: error.rs  executor.rs  executor_test.rs  lib.rs  macos.rs  mock_test.rs  platform.rs
crates/macwarden-snapshot/: Cargo.toml
crates/macwarden-snapshot/src/: error.rs  lib.rs  store.rs  store_test.rs  types.rs
crates/macwarden/src/: cli.rs  main.rs  openbinary.rs
crates/macwarden/src/commands/: apply.rs  catalog.rs  daemon.rs  daemon_test.rs  devices.rs  devices_test.rs  disable.rs  doctor.rs  enable.rs  enforce.rs  enforce_test.rs  explain.rs  groups.rs  inspect.rs  lookup.rs  mod.rs  monitor.rs  network.rs  network_enrich.rs  network_enrich_test.rs  network_test.rs  profiles.rs  ps.rs  ps_test.rs  rollback.rs  rollback_test.rs  scan.rs  scrub.rs  scrub_fs.rs  status.rs  status_collect.rs
crates/macwarden/src/commands/inventory/: lookup.rs  mod.rs  scan.rs
crates/macwarden/src/commands/net/: mod.rs  net_apps.rs  net_apps_test.rs  net_block.rs  net_block_test.rs  net_enrich.rs  net_enrich_test.rs  net_explain.rs  net_import.rs  net_learn.rs  net_learn_test.rs  net_lsof.rs  net_lsof_test.rs  net_rdns.rs  net_rdns_test.rs  net_scan.rs  net_scan_test.rs  net_shield.rs  net_shield_test.rs  net_test.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: error.rs  event.rs  lib.rs  store.rs  store_test.rs
crates/net/: Cargo.toml
crates/net/src/: blocklist.rs  blocklist_test.rs  connection.rs  connection_test.rs  domain_trie.rs  domain_trie_test.rs  error.rs  es_event.rs  es_event_test.rs  geoip.rs  geoip_test.rs  graylist.rs  graylist_test.rs  group.rs  group_test.rs  host.rs  host_test.rs  import.rs  import_test.rs  lib.rs  matcher.rs  matcher_test.rs  profile.rs  profile_test.rs  rule.rs  rule_test.rs  safelist.rs  safelist_test.rs  services.rs  tracker.rs  tracker_test.rs  user_rule.rs  user_rule_test.rs
crates/policy/: Cargo.toml
crates/policy/src/: artifact.rs  artifact_test.rs  engine_test.rs  error.rs  group.rs  group_test.rs  lib.rs  profile_test.rs  safelist.rs  score.rs  score_test.rs  types.rs  types_test.rs
crates/procmon/: Cargo.toml
crates/procmon/src/: cache.rs  cache_test.rs  code_signing.rs  code_signing_test.rs  error.rs  error_test.rs  ffi.rs  ffi_test.rs  lib.rs  responsible.rs  responsible_test.rs  rusage.rs  rusage_test.rs  sockets.rs  sockets_test.rs  types.rs  types_test.rs
crates/sensors/: Cargo.toml
crates/sensors/src/: camera.rs  camera_test.rs  debounce.rs  debounce_test.rs  error.rs  ffi.rs  ffi_corewlan.rs  ffi_iokit.rs  lib.rs  lib_test.rs  microphone.rs  microphone_test.rs  network_context.rs  network_context_test.rs  power.rs  power_test.rs  screen.rs  screen_test.rs  wifi.rs  wifi_test.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: error.rs  lib.rs  store_test.rs  types.rs
knowledge/apps/: 1password.toml  _schema.toml  arc.toml  chrome.toml  discord.toml  figma.toml  finder.toml  firefox.toml  iina.toml  mail.toml  messages.toml  music.toml  safari.toml  slack.toml  spotify.toml  steam.toml  system-settings.toml  terminal.toml  vscode.toml  xcode.toml  zoom.toml
knowledge/blocklists/: hashes.txt
knowledge/network/groups/: browser-essentials.toml  communication.toml  development.toml  gaming.toml  icloud-services.toml  location-services.toml  macos-services.toml  media-streaming.toml  productivity.toml
knowledge/network/trackers/: advertising.toml  analytics.toml  fingerprinting.toml  social.toml
knowledge/services/: annotations.toml
knowledge/services/artifacts/: app-caches.toml  browser-traces.toml  cloudkit-cache.toml  mail.toml  quarantine.toml  quicklook.toml  recent-items.toml  safari.toml  saved-state.toml  spotlight.toml  system-logs.toml  telemetry.toml
knowledge/services/groups/: airdrop.toml  airplay.toml  audit-logs.toml  backup.toml  bluetooth.toml  crash-reports.toml  document-versions.toml  fmf.toml  fsevents.toml  gamekit.toml  gatekeeper.toml  hang-detection.toml  install-history.toml  location.toml  mail.toml  maps.toml  media-analysis.toml  messages.toml  network-quality.toml  network-usage.toml  notifications.toml  photos.toml  print-logs.toml  profiling.toml  quarantine.toml  quicklook.toml  recent-items.toml  saved-state.toml  siri.toml  (+10 more)
(+21 files in other folders)
