[package]
name = "es"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
net = { workspace = true }
procmon = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }

[lints]
workspace = true
