[package]
name = "inventory"
description = "Binary inventory scanner and storage for macwarden"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
etchdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
plist = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
