[package]
name = "macwarden-catalog"
description = "Service annotation database and plist parsing for macwarden"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
macwarden-core = { workspace = true }
globset = { workspace = true }
plist = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
