[package]
name = "macwarden"
description = "A profile-based daemon firewall for macOS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "macwarden"
path = "src/main.rs"

[dependencies]
policy = { workspace = true }
catalog = { workspace = true }
launchd = { workspace = true }
snapshot = { workspace = true }
sensors = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
plist = { workspace = true }
tabled = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
notify = { workspace = true }
signal-hook = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
