[package]
name = "net"
description = "Network firewall rule engine for macwarden — rule types, matcher, connection model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
appdb = { workspace = true }
globset = { workspace = true }
ipnet = { workspace = true }
maxminddb = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
