[package]
name = "procmon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
